<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/filtrarRecetas"
        android:id="@+id/popupTitulo"
        android:textSize="20dp"
        android:paddingBottom="20dp"
        android:textStyle="bold"
        android:textColor="@color/button_color">

    </TextView>

    <EditText

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/popupTitulo"
        android:id="@+id/ingrediente"
        android:hint="@string/filtrarIngrediente">

    </EditText>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingrediente"
        android:id="@+id/popupFiltrar"
        android:text="@string/filtrar"
        android:textColor="@android:color/white"
        android:background="@color/button_color"
        android:layout_marginTop="10dp">


    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/popupFiltrar"
        android:id="@+id/mostrarTodo"
        android:text="@string/mostrarRecetas"
        android:textColor="@android:color/white"
        android:background="@color/button_color"
        android:layout_marginTop="10dp">


    </Button>



</RelativeLayout>